--- a/css/style.css
+++ b/css/style.css
@@ -15,10 +15,18 @@ body{
   padding: 0;
   margin: 0;
   font-size: 16px;
+  font-family: "Roboto Condensed","Arial",sans-serif;
   line-height: 1.5;
-  background-color: #fff;
+  font-weight: 400;
+  background-color: #222;
   color: #000;
 }
+
+*:focus{
+ outline: 2px dashed#1e90ff;
+ outline-offset: 2px;
+}
+
 img{
   max-width: 100%;
   height: auto;
@@ -48,6 +56,7 @@ img{
   align-items: center;
   width:100%;
   max-width: 600px;
+  padding: 24px;
   background-image: url("../img/Rectangle\ 1.jpg");
   background-repeat:no-repeat;
   background-size: cover;
@@ -61,6 +70,8 @@ img{
   margin-top: 0;
   margin-bottom:24px;
   text-transform: uppercase;
+  font-family: "Bebas Neue","Roboto Condensed","Arial",sans-serif;
+  font-weight: 400;
   margin-bottom: 24px;
   font-size: 24px;
   line-height: normal;
@@ -72,11 +83,17 @@ img{
   background-color:#1e90ff ;
   text-decoration: none;
   text-transform: uppercase;
+  font-family: "Bebas Neue","Roboto Condensed","Arial",sans-serif ;
   font-size: 16px;
   line-height: 24px;
   color: #fff;
   letter-spacing: 2px;
-
+}
+.hero-link:hover{
+  background: rgba(30, 144, 255, 0.8);
+}
+.hero-link:active{
+  background: rgba(30, 144, 255, 0.8);
 }
 .hero-link-inner {
   display: flex;
@@ -93,8 +110,141 @@ img{
   content: "";
 
 }
-.hero-link-text {
+
+/* LATEST-VIDEOS */
+.latest-videos {
+  width: 100%;
+  max-width: 600px;
+  padding: 54px;
+  background-color: #fff;
 }
+.latest-videos-heading {
+ margin-top: 0;
+ margin-bottom: 24px;
+ font-size: 24px;
+ line-height: normal;
+ color: #222;
+ font-family: "Bebas Neue","Open Sans Condensed","Arial",sans-serif;
+ font-weight: 400;
+ letter-spacing: 2px;
+ text-transform: uppercase;
+}
+.latest-videos-divider {
+  height: 1;
+  background-color: #999;
+  margin-top: 24px;
+  margin-bottom: 24px;
+}
+.latest-videos-list {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  margin-bottom: 24px;
+}
+.latest-videos-item:not(:last-child) {
+  margin-bottom: 10px;
+}
+
+/* ITEM-LATEST-VIDEOS */
+.item-latest-videos {
+  display: flex;
+}
+.item-latest-videos-img {
+  width: 160px;
+  height: auto;
+  object-fit: cover;
+  border-radius: 4px;
+}
+.item-latest-videos-info {
+  padding: 16px;
+}
+.item-latest-videos-heading {
+  margin-top: 0;
+  margin-bottom: 4px;
+  font-family: "Bebas Neue","Open Sans Condensed","Arial",sans-serif;
+  font-size: 18px;
+  line-height: normal;
+  font-weight: 400;
+  letter-spacing: 2px;
+}
+.item-latest-videos-link {
+  display: inline-block;
+  text-decoration: none;
+  color: #222;
+}
+.item-latest-videos-link:hover{
+color: #1e90ff;
+}
+.item-latest-videos-link :active{
+  opacity: 0.6;
+}
+.item-latest-videos-meta {
+  display: flex;
+  align-items: center;
+  color: #888;
+  font-size: 14px;
+  line-height:normal;
+
+}
+
+.item-latest-videos-meta-item{
+  display: flex;
+  align-items: center;
+}
+
+.item-latest-videos-meta-item:not(:last-child){
+  margin-right: 24px;
+}
+.item-latest-videos-meta-item::before{
+  width: 16px;
+  height: 16px;
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center center;
+  content: "";
+}
+.item-latest-videos-meta-item-published-at::before{
+  background-image:url("../img/soat.svg")
+}
+.item-latest-videos-meta-item-views::before{
+  background-image: url("../img/ko\'z.svg");
+}
+
+/* LOAD-MORE-BUTTON */
+.load-more-button{
+  display: block;
+  border:none;
+  padding: 12px;
+  width: 100%;
+  background-color: #1e90ff;
+  color: #fff;
+  font-size: 14px;
+  font-weight: 700;
+  line-height: normal;
+  cursor: pointer;
+  border-radius: 4px;
+}
+.load-more-button:hover{
+  background: rgba(30, 144, 255, 0.8);
+}
+.load-more-button:active{
+  background: rgba(30, 144, 255, 0.6);
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
